fixed bug with clock not showing 12 at 12 am, and fixed bug with am showing am at 12am and pm at 12 pm.  Verified with multiple time zones on my phone.  Attempted to resolve issue with the session not being destroyed during log on with safari and iphone.  Works on windows via chrome, but not on any mac/apple device.

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -333,6 +333,7 @@ iframe {
 /*///////////iphone 7 plus Landscape Orientation /////////////*/
 
 @media screen and (max-width: 736px) and (min-width: 718px) {
+	/*/// Main PORT page ///*/
 	.topnav { width: 101%; z-index:3; }
 	#clock { font-size: 15px }
 	.med_chk {position:absolute; top:32px; width:405px; padding:0;}
@@ -345,6 +346,10 @@ iframe {
 	.dropbtn {z-index: 1}
 	#joke {margin-left: 7px;}
 	#email {margin-bottom: 36px;}
+
+	/*/// Signin Page ///*/
+	.si_name {margin-right: 4.5%; margin-top: 6%; height: 288px;}
+	.chicken {width: 168px; padding: 0; margin-top: 50px;}
 }
 
 
